--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   compile "com.google.android.gms:play-services-gcm:9.6.1"
   compile files('libs/libjingle_peerconnection.jar')
   //compile files('path/to/lib.so')
+  compile "com.android.support:support-v13:25.1.1"
   compile 'com.google.android.gms:play-services-appindexing:9.6.1'
 }
 
