--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
   compile files('libs/libjingle_peerconnection.jar')
   //compile files('path/to/lib.so')
   compile 'com.google.android.gms:play-services-appindexing:9.6.1'
+  compile 'com.android.support:recyclerview-v7:23.+'
+  compile 'de.hdodenhof:circleimageview:2.1.0'
+  compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
 }
 
 apply plugin: 'com.google.gms.google-services'
