--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
 dependencies {
   compile 'com.neovisionaries:nv-websocket-client:1.30'
-  compile "com.google.android.gms:play-services-gcm:9.6.1"
+  compile 'com.google.android.gms:play-services-gcm:9.6.1'
   compile files('libs/libjingle_peerconnection.jar')
   //compile files('path/to/lib.so')
   compile "com.android.support:support-v13:25.1.1"
@@ -51,6 +51,7 @@ dependencies {
   compile 'com.android.support:recyclerview-v7:23.+'
   compile 'de.hdodenhof:circleimageview:2.1.0'
   compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
+  compile 'com.google.code.gson:gson:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
