--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,11 @@ android {
 
 dependencies {
   compile 'com.neovisionaries:nv-websocket-client:1.30'
-  compile "com.google.android.gms:play-services-gcm:9.6.1"
+  compile 'com.google.android.gms:play-services-gcm:9.6.1'
   compile files('libs/libjingle_peerconnection.jar')
   //compile files('path/to/lib.so')
   compile 'com.google.android.gms:play-services-appindexing:9.6.1'
+  compile 'com.google.code.gson:gson:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
