--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
   <application
-      android:allowBackup="false"
+      android:allowBackup="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name">
     <activity
