--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:name=".videocall.VideoCallActivity"
+            android:name=".chat.ChatActivity"
             android:launchMode="singleTop"
             android:label="@string/app_name">
             <intent-filter>
