- Merge text and video chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,7 @@
             android:exported="false">
         </service>
 
-        <service android:name=".videocall.DraggableService">
+        <service android:name=".videocall.DraggableService"></service>
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
