--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name">
     <activity
-        android:name=".videocall.VideoCallActivity"
+        android:name=".chat.ChatActivity"
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar"
         android:label="@string/app_name"
         android:launchMode="singleTop">
       <intent-filter>
