--- a/ipcclib/src/main/AndroidManifest.xml
+++ b/ipcclib/src/main/AndroidManifest.xml
@@ -27,11 +27,12 @@
         android:name=".chat.ChatActivity"
         android:label="@string/app_name"
         android:launchMode="singleTop">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+      <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN"/>-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+      <!--</intent-filter>-->
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
 
@@ -54,54 +55,10 @@
         android:label="@string/app_name"
         android:screenOrientation="fullUser"/>
 
-    <service
-        android:name=".NotificationService"
-        android:enabled="true"
-        android:exported="true"/>
-
-    <!-- [START gcm_receiver] -->
-    <receiver
-        android:name="com.google.android.gms.gcm.GcmReceiver"
-        android:exported="true"
-        android:permission="com.google.android.c2dm.permission.SEND">
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-        <category android:name="gcm.play.android.samples.com.gcmquickstart"/>
-      </intent-filter>
-    </receiver>
-    <!-- [END gcm_receiver] -->
-
-    <!-- [START gcm_listener] -->
-    <service
-        android:name="de.lespace.apprtc.MyGcmListenerService"
-        android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-      </intent-filter>
-    </service>
-    <!-- [END gcm_listener] -->
-    <!-- [START instanceId_listener] -->
-    <service
-        android:name="de.lespace.apprtc.MyInstanceIDListenerService"
-        android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.android.gms.iid.InstanceID"/>
-      </intent-filter>
-    </service>
-    <!-- [END instanceId_listener] -->
-    <service
-        android:name="de.lespace.apprtc.RegistrationIntentService"
-        android:exported="false">
-    </service>
-
     <service android:name=".videocall.DraggableService">
     </service>
     <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
  App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-    <meta-data
-        android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version"/>
-
   </application>
 
 </manifest>
