--- a/ipcclib/build.gradle
+++ b/ipcclib/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -19,19 +19,36 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a'
+            universalApk true
+        }
+    }
+    sourceSets.main {
+        jniLibs.srcDir 'libs'
+        jni.srcDirs = [] //disable automatic ndk-build call
+    }
+
+    lintOptions {
+        abortOnError true
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/libjingle_peerconnection.jar')
+//    compile files('libs/libjingle_peerconnection.jar')
     compile 'com.neovisionaries:nv-websocket-client:1.30'
-    compile 'com.google.android.gms:play-services-gcm:9.6.1'
+//    compile 'com.google.android.gms:play-services-gcm:9.6.1'
     compile files('libs/libjingle_peerconnection.jar')
     //compile files('path/to/lib.so')
     compile 'com.android.support:support-v13:25.3.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.6.1'
+//    compile 'com.google.android.gms:play-services-appindexing:9.6.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
+//    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.7'
     compile 'com.google.code.gson:gson:2.8.0'
     compile "com.android.support:support-v4:25.3.0"
     compile "com.android.support:appcompat-v7:25.3.0"
