--- a/ipcclib/src/main/AndroidManifest.xml
+++ b/ipcclib/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
 
     <service android:name=".videocall.DraggableService">
     </service>
+    <service android:name=".CallService"/>
     <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
  App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
   </application>
