--- a/ipcclib/src/main/AndroidManifest.xml
+++ b/ipcclib/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
     <activity
         android:name=".chat.ChatActivity"
         android:label="@string/app_name"
-        android:launchMode="singleTop">
+    android:screenOrientation="fullUser"
+    android:configChanges="orientation|screenSize"
+    android:launchMode="singleTop">
 
       <!--<intent-filter>-->
         <!--<action android:name="android.intent.action.MAIN"/>-->
