--- a/ipcclib/src/main/AndroidManifest.xml
+++ b/ipcclib/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
   <application
       android:allowBackup="true"
       android:label="@string/app_name"
+      android:hardwareAccelerated="true"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
 
@@ -27,6 +28,7 @@
         android:name=".chat.ChatActivity"
         android:label="@string/app_name"
     android:screenOrientation="fullUser"
+
     android:configChanges="orientation|screenSize"
     android:launchMode="singleTop">
 
